Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52085

Webengine doesn't allow to open local content from html files in qrc file

XMLWordPrintable

    • 29f9a2fb68568208a70ba9efef0e455b50a4d3e3 272a1421076191e5653607fa06f8b96baeb1159a

      To reproduce the problem, please unzip the file and change the index.html's image tag's src to point to the same directory's Qt.png file.
      Build and run.
      Result: the application doesn't show any image
      Expected result: the application should show Qt logo.

      Summary: qrc content is apparently not treated as local content despite of LocalContentCanAccessRemoteUrls is set.

      Continuation of: QTBUG-51867

        1. local.py
          0.3 kB
        2. QTBUG-52085.zip
          12 kB
        3. webenginesettingstest.tar.gz
          708 kB
        For Gerrit Dashboard: QTBUG-52085
        # Subject Branch Project Status CR V

            mibrunin Michael Bruning
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: