Register qrc as local after blink initialization.

It is needed to let local content access the qrc resources by making them
part of the same security origin. This is stated in the docs as the default
behavior.

This also backports change f7d343000d77c80f34a115fe9c78f101929292b1
from 5.7, which fixed some race condition with the qrc registration.

Task-number: QTBUG-52085
Change-Id: Ia704fa6dbce8529f82695ab543244020cb9f8b8a
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@theqtcompany.com>