src/core/renderer/content_renderer_client_qt.h
@@ -41,6 +41,10 @@
 #include <QtGlobal>
 #include <QScopedPointer>
 
+namespace content {
+class RenderProcessObserver;
+}
+
 namespace visitedlink {
 class VisitedLinkSlave;
 }
@@ -69,6 +73,7 @@ public:
 private:
     QScopedPointer<visitedlink::VisitedLinkSlave> m_visitedLinkSlave;
     QScopedPointer<web_cache::WebCacheRenderProcessObserver> m_webCacheObserver;
+    QScopedPointer<content::RenderProcessObserver> m_renderProcessObserver;
 };
 
 } // namespace
